# aerialcv

./: .gitignore  CMakeLists.txt
data/rural/selected_demo/: assessments.txt  assessments_old.txt
src/: CMakeLists.txt  bigint.cpp  bigint.h  curves.cpp  curves.h  main.cpp  parameters.cpp  parameters.h  to_tiles.cpp
